--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Mon Index (pas mon majeur)</h1>
+    <h1>Cette page roxx !</h1>
 </body>
 </html>
